# helios

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.org  camera.cpp  canvas.cpp  common.hpp  intersection.cpp  intersection.hpp  light.cpp  light.hpp  main.cpp  material.cpp  matrix.hpp  object.hpp  ray.hpp  sphere.cpp  sphere.hpp  tuple.cpp  tuple.hpp  world.hpp
include/: bmp_file.hpp  camera.hpp  canvas.hpp  cube.hpp  cylinder.hpp  group.hpp  intersection.hpp  light.hpp  material.hpp  matrix.hpp  obj_file.hpp  object.hpp  pattern.hpp  plane.hpp  ray.hpp  scene_file.hpp  sphere.hpp  triangle.hpp  tuple.hpp  world.hpp
scenes/: checkers-box.yml
src/: bmp_file.cpp  camera.cpp  canvas.cpp  cube.cpp  cylinder.cpp  group.cpp  intersection.cpp  light.cpp  main.cpp  material.cpp  matrix.cpp  obj_file.cpp  object.cpp  pattern.cpp  scene_file.cpp  sphere.cpp  triangle.cpp  tuple.cpp  world.cpp
test/: cubes.cpp  cylinders.cpp  groups.cpp  intersections.cpp  lights.cpp  materials.cpp  matrices.cpp  matrix_test.cpp  patterns.cpp  ray_test.cpp  rays.cpp  spheres.cpp  triangles.cpp  vectors.cpp  world.cpp
